--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -26,9 +26,10 @@
                                         <div class="card-block">
                                             <div class="row align-items-center justify-content-center">
                                                 <div class="col">
-                                                    <h5 class="m-0">vCenter Details</h5>
+                                                    <img src="static/assets/images/vmware.svg" alt="VMware vCenter" width="7%" height="7%">
                                                 </div>
                                             </div>
+                                            <h5 class="m-0">vCenter Details</h5>
                                             <h6 class="text-muted mt-4 mb-0">HOST: {{ vc_host }}</h6>
                                             <h6 class="text-muted mt-4 mb-0">Admin: {{ vc_admin }}</h6>
                                             <i class="fab fa-clone text-c-blue f-50"></i>
@@ -89,9 +90,10 @@
                                         <div class="card-block">
                                             <div class="row align-items-center justify-content-center">
                                                 <div class="col">
-                                                    <h5 class="m-0">OpenStack Details</h5>
+                                                    <img src="static/assets/images/openstack.png" alt="OpenStack Logo" width="7%" height="7%">
                                                 </div>
                                             </div>
+                                            <h5 class="m-0">OpenStack Details</h5>
                                             <h6 class="text-muted mt-4 mb-0">URL: {{ os_url }}</h6>
                                             <h6 class="text-muted mt-4 mb-0">Admin: {{ os_admin }}</h6>
                                             <h6 class="text-muted mt-4 mb-0">Domain: {{ os_domain }}</h6>
