--- a/apps/templates/includes/scripts.html
+++ b/apps/templates/includes/scripts.html
@@ -7,3 +7,5 @@
 <script src="{{ config.ASSETS_ROOT }}/plugins/gijgo/js/gijgo.min.js"></script>
 <script src="{{ config.ASSETS_ROOT }}/plugins/datatables/js/datatables.min.js"></script>
 <script src="{{ config.ASSETS_ROOT }}/plugins/datatables/js/dataTables.editor.js"></script>
+<script src="{{ config.ASSETS_ROOT }}/plugins/datatables/js/dataTables.rowGroup.js"></script>
+<script src="{{ config.ASSETS_ROOT }}/plugins/datatables/js/rowGroup.bootstrap4.js"></script>
