--- a/apps/templates/home/tbl_flavors.html
+++ b/apps/templates/home/tbl_flavors.html
@@ -39,14 +39,12 @@
                                         </div>
                                         <div class="card-block table-border-style">
                                             <div class="table-responsive">
-                                                <table id="vms_composition" class="table table-striped">
+                                                <table id="vms_composition" class="table table-striped table-bordered">
                                                     <thead>
                                                         <tr>
                                                             <th>#</th>
                                                             <th>Name</th>
                                                             <th>Guest</th>
-                                                            <th>Instance UUID</th>
-                                                            <th>Annotation</th>
                                                             <th>vCPUs</th>
                                                             <th>Memory (GB)</th>
                                                             <th>Root Disk Size (GB)</th>
@@ -57,8 +55,6 @@
                                                             <th>#</th>
                                                             <th>Name</th>
                                                             <th>Guest</th>
-                                                            <th>Instance UUID</th>
-                                                            <th>Annotation</th>
                                                             <th>vCPUs</th>
                                                             <th>Memory (GB)</th>
                                                             <th>Root Disk Size (GB)</th>
@@ -81,7 +77,7 @@
                                         </div>
                                         <div class="card-block table-border-style">
                                             <div class="table-responsive">
-                                                <table id="recommended_flavors" class="table table-striped">
+                                                <table id="recommended_flavors" class="table table-striped table-bordered">
                                                     <thead>
                                                         <tr>
                                                             <th>#</th>
@@ -137,8 +133,6 @@ let compeditor = new DataTable.Editor( {
         { label: "#", name: 'seqno'},
         { label: 'Name', name: 'Name' },
         { label: 'Guest',  name: 'Guest'  },
-        { label: 'Instance UUID',  name: 'Instance UUID'  },
-        { label: 'Annotation',  name: 'Annotation'  },
         { label: 'Memory',  name: 'Memory'  },
         { label: 'vCPUs',  name: 'CPUs'  },
         { label: 'Root Disk',  name: 'RootDiskSize'  },
@@ -151,8 +145,6 @@ let comptable = new DataTable('#vms_composition', {
         { data: 'seqno'},
         { data: 'Name' },
         { data: 'Guest' },
-        { data: 'Instance UUID' },
-        { data: 'Annotation' },
         { data: 'Memory' },
         { data: 'CPUs' },
         { data: 'RootDiskSize' },
