--- a/apps/templates/home/tbl_flavors.html
+++ b/apps/templates/home/tbl_flavors.html
@@ -39,7 +39,7 @@
                                         </div>
                                         <div class="card-block table-border-style">
                                             <div class="table-responsive">
-                                                <table id="vms_composition" class="table table-striped table-bordered">
+                                                <table id="vms_composition" class="table table-striped">
                                                     <thead>
                                                         <tr>
                                                             <th>#</th>
@@ -77,7 +77,7 @@
                                         </div>
                                         <div class="card-block table-border-style">
                                             <div class="table-responsive">
-                                                <table id="recommended_flavors" class="table table-striped table-bordered">
+                                                <table id="recommended_flavors" class="table table-striped">
                                                     <thead>
                                                         <tr>
                                                             <th>#</th>
@@ -107,7 +107,7 @@
                                 </div>
                                 <!-- [ stiped-table ] end -->
                             </div>
-                            <button type="button" class="btn btn-primary" title="btn btn-primary" data-toggle="tooltip">Create Flavors</button>
+                            <button id="create_flavors" type="button" class="btn btn-primary" title="btn btn-primary" data-toggle="tooltip">Create Flavors</button>
                             <!-- [ Main Content ] end -->
                         </div>
                     </div>
@@ -198,5 +198,46 @@ let flvtable = new DataTable('#recommended_flavors', {
     },
     select: true
 } );
+// Activate an inline edit on click of a table cell
+flvtable.on('click', 'tbody td:not(:first-child)', function (e) {
+    flveditor.inline(this);
+});
+
+const create_flavors = document.getElementById('create_flavors');
+
+create_flavors.addEventListener('click', function (event) {
+  event.preventDefault();
+
+  const formData = {}
+
+  const requestOptions = {
+    method: 'POST',
+    body: formData,
+  };
+
+  var txt = create_flavors.innerText
+  create_flavors.disabled = true
+  create_flavors.innerText = "Loading vCenter Inventory..."
+  fetch(base_url +'/flavors/create', requestOptions)
+    .then(response => {
+      create_flavors.innerText = txt
+      create_flavors.disabled = false
+      if (!response.ok) {
+        throw new Error('Network response was not ok');
+      }
+      console.log(response)
+      return response.text();
+    })
+    .then(data => {
+      create_flavors.innerText = txt
+      create_flavors.disabled = false
+      data = JSON.parse(data)
+    })
+    .catch(error => {
+      create_flavors.innerText = txt
+      create_flavors.disabled = false
+      console.error('Error:', error);
+    });
+});
 </script>
 {% endblock javascripts %}
