--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -32,6 +32,10 @@
     <!-- datatables css -->
     <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/plugins/datatables/css/datatables.min.css">
     <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/plugins/datatables/css/editor.dataTables.css">
+    <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/plugins/datatables/css/dataTables.bootstrap4.css">
+    <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/plugins/datatables/css/buttons.bootstrap4.css">
+    <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/plugins/datatables/css/select.bootstrap4.css">
+    <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/plugins/datatables/css/dataTables.dateTime.min.css">
     <!-- vendor css -->
     <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/css/style.css">
     <!-- dark mode css -->
