--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -35,7 +35,7 @@
                             class="feather icon-server"></i></span><span class="pcoded-mtext">Networks</span></a>
                 </li>
                 <li data-username="Table bootstrap datatable footable" 
-                    class="nav-item {% if 'migraiton_plans' in segment %} active {% endif %}">
+                    class="nav-item {% if 'migration_plans' in segment %} active {% endif %}">
                     <a href="/migration_plans" class="nav-link "><span class="pcoded-micon"><i
                             class="feather icon-server"></i></span><span class="pcoded-mtext">Migration Plans</span></a>
                 </li>
