--- a/apps/templates/home/tbl_migration_plans.html
+++ b/apps/templates/home/tbl_migration_plans.html
@@ -7,24 +7,48 @@
 
 {% block content %}
 
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Migration Plan</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+               <form>
+                 <div class="form-group">
+                   <label for="formGroupExampleInput">Name</label>
+                   <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+                 </div>
+                 <div class="form-group">
+                   <label for="formGroupExampleInput2">Description</label>
+                   <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input placeholder">
+                 </div>
+                 <div class="form-group">
+                   <label for="inputState">Type</label>
+                   <select id="inputState" class="form-control">
+                     <option selected>Cold</option>
+                     <option>Warm</option>
+                     <option>Dry Run</option>
+                   </select>
+                 </div>
+               </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-primary">Create</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- [ Main Content ] start -->
     <div class="pcoded-main-container">
         <div class="pcoded-wrapper">
-
             <div class="pcoded-content">
                 <div class="pcoded-inner-content">
-                    <!-- [ breadcrumb ] start -->
-                    <div class="page-header">
-                        <div class="page-block">
-                            <div class="row align-items-center">
-                                <div class="col-md-12">
-                                    <div class="page-header-title">
-                                        <h5 class="m-b-10">Migration Plans</h5>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <!-- [ breadcrumb ] end -->
                     <div class="main-body">
                         <div class="page-wrapper">
@@ -32,8 +56,6 @@
                             <div class="row">
                                 <!-- [ tabs ] start -->
                                 <div class="col-sm-12">
-                                    <h5 class="mt-4">Tenants</h5>
-                                    <hr>
                                     <div class="row">
                                         <div class="col-md-2 col-sm-12">
                                             <ul class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
@@ -162,7 +184,11 @@ let tenant_vms_table = new DataTable('#tenant_vms', {
     layout: {
         topStart: {
             buttons: [
-                { extend: 'selected', 'text': 'Create Migration Plan' },
+                { extend: 'selected', 'text': 'Create Migration Plan', action: function ( e, dt, node, config ) {
+                     e.preventDefault();
+                     jQuery.noConflict();
+                     $('#exampleModal').modal('show') 
+            } },
                 { extend: 'selectNone', 'text': 'DeSelectAll' }]
         }
     },
