--- a/apps/templates/home/tbl_vm2tenants.html
+++ b/apps/templates/home/tbl_vm2tenants.html
@@ -29,7 +29,8 @@
                                                 <table id="vm2tenants" class="table table-striped table-bordered">
                                                     <thead>
                                                         <tr>
-                                                            <th>#</th>
+                                                            <th></th>
+                                                            <th></th>
                                                             <th>VM Path</th>
                                                             <th>Name</th>
                                                             <th>Guest</th>
@@ -39,7 +40,8 @@
                                                     </thead>
                                                     <tfoot>
                                                         <tr>
-                                                            <th>#</th>
+                                                            <th></th>
+                                                            <th></th>
                                                             <th>VM Path</th>
                                                             <th>Name</th>
                                                             <th>Guest</th>
@@ -76,7 +78,8 @@ let vm2tenant_editor = new DataTable.Editor( {
     table: '#vm2tenants',
     idSrc:  'seqno',
     fields: [
-        { label: "#", name: 'seqno'},
+        { label: "", name: 'seqno'},
+        { label: "", name: 'supported'},
         { label: 'VM Path',  name: 'VM Path', multiEditable: false },
         { label: 'Name', name: 'Name', multiEditable: false },
         { label: 'Guest',  name: 'Guest', multiEditable: false  },
@@ -98,6 +101,24 @@ let vm2tenant_table = new DataTable('#vm2tenants', {
     ajax: base_url + '/vm2tenants/payload',
     columns: [
         { data: 'seqno'},
+        { data: 'supported',
+          render: function (data, type) {
+              let r = '';
+ 
+              switch (data) {
+                  case 'Success':
+                      r = '<i class="fa fa-check-circle" aria-hidden="true"></i>'
+                      break;
+                  case 'Error':
+                      r = '<i class="fa fa-stop-circle" aria-hidden="true"></i>'
+                      break;
+                  case 'Warning':
+                      r = '<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>'
+                      break;
+              }
+              return r
+           },
+        },
         { data: 'VM Path' },
         { data: 'Name' },
         { data: 'Guest' },
