--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -40,6 +40,11 @@
                             class="feather icon-server"></i></span><span class="pcoded-mtext">Images</span></a>
                 </li>
                 <li data-username="Table bootstrap datatable footable" 
+                    class="nav-item {% if 'storage' in segment %} active {% endif %}">
+                    <a href="/storage" class="nav-link "><span class="pcoded-micon"><i
+                            class="feather icon-server"></i></span><span class="pcoded-mtext">Storage</span></a>
+                </li>
+                <li data-username="Table bootstrap datatable footable" 
                     class="nav-item {% if 'migration_plans' in segment %} active {% endif %}">
                     <a href="/migration_plans" class="nav-link "><span class="pcoded-micon"><i
                             class="feather icon-server"></i></span><span class="pcoded-mtext">Migration Plans</span></a>
