--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -36,7 +36,7 @@
                 </li>
                 <li data-username="Table bootstrap datatable footable" 
                     class="nav-item {% if 'images' in segment %} active {% endif %}">
-                    <a href="/networks" class="nav-link "><span class="pcoded-micon"><i
+                    <a href="/images" class="nav-link "><span class="pcoded-micon"><i
                             class="feather icon-server"></i></span><span class="pcoded-mtext">Images</span></a>
                 </li>
                 <li data-username="Table bootstrap datatable footable" 
